Готовы адаптивные сетки, проверка на пиксель перфекте

--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -14,6 +14,7 @@
   .stylenone();
   .font (17px; 24px; 700);
   padding-left: 28px;
+  padding-right: 80px;
   padding-top: 24px;
   padding-bottom: 5px;
 }
@@ -43,6 +44,11 @@
 }
 
 @media (min-width: @tablet-width) {
+  .catalog-item {
+    display: block;
+    margin-bottom: 10px;
+  }
+
   .catalog-item__image-mobile {
     display: none;
   }
@@ -51,36 +57,45 @@
     display: block;
   }
 
-  .catalog-item__prodact {
+  .catalog-item__wrapper {
+    max-height: 334px;
     display: flex;
-    padding-bottom: 55px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .catalog-item__prodact {
+    width: 668px;
+    display: flex;
+    margin-bottom: 52px;
   }
 
   .catalog-item__title {
     .font (20px; 24px; 700);
     padding-left: 25px;
     padding-top: 25px;
-    padding-bottom: 10px;
+    padding-bottom: 0;
   }
 
   .catalog-item__characteristic {
+    border: none;
     .font (15px; 30px; 400);
+    margin: 0;
     padding-left: 25px;
-    padding-bottom: 180px;
+    padding-bottom: 160px;
   }
 
   .catalog-item__price {
     .font (17px; 24px; 700);
-    padding-left: 25px;
-    padding-top: 20;
-    padding-bottom: 20px;
-    padding-right: 160px;
+    padding-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 30px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .catalog-item {
-    margin-bottom: 55px;
+    margin-bottom: 5px;
   }
 
   .catalog-item__image-tablet {
@@ -89,6 +104,10 @@
 
   .catalog-item__image-desktop {
     display: block;
+  }
+
+  .catalog-item__title {
+    padding-right: 20px;
   }
 
   .catalog-item__list {
@@ -100,13 +119,24 @@
   .catalog-item__prodact {
     display: flex;
     flex-direction: column;
+    justify-content: stretch;
     padding: 0;
     margin-right: 50px;
     width: 316px;
+    box-sizing: border-box;
   }
 
   .catalog-item__characteristic {
-    padding-bottom: 40px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+  }
+
+  .catalog-item__wrapper {
+    flex-grow: 1;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .catalog-item__price {
