--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -6,6 +6,8 @@
 }
 
 .catalog__title {
+  padding-left: 30px;
+  padding-right: 30px;
   .stylenone();
   .font(27px; 30px; 700);
   text-align: center;
@@ -19,22 +21,25 @@
     background-color: transparent;
     margin-left: -50px;
     margin-right: -50px;
-    margin-bottom: 165px;
+    margin-bottom: 160px;
   }
 
   .catalog__title {
     .font (43px; 50px; 700);
-    padding: 0;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 5px;
   }
 
   .catalog__background {
     position: absolute;
     background-color: @grey;
-    width: auto;
+    width: 100%;
     box-sizing: border-box;
     height: 230px;
-    top: -110px;
+    top: -92px;
     z-index: -1;
+    border-top: 1px solid @grey;
   }
 }
 
@@ -43,14 +48,16 @@
     margin-left: -50px;
     margin-right: -50px;
     margin-top: 30px;
-    margin-bottom: 230px;
+    margin-bottom: 153px;
   }
 
   .catalog__title {
+    padding-top: 21px;
     .font (53px; 57px; 700);
   }
 
   .catalog__background {
     height: 256px;
+    top: -73px;
   }
 }
