--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -10,7 +10,30 @@
 }
 
 @media (min-width: @tablet-width) {
+  .form {
+    .font (19px; 18px; 700);
+    margin-bottom: 50px;
+  }
+
   .form-notice {
+    .font (17px; 30px; 400);
+    margin-top: 5px;
+    margin-bottom: 15px;
     order: 2;
+  }
+
+  .form-button {
+    width: 230px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-button {
+    margin-left: 175px;
+    width: 230px;
+  }
+
+  .form-notice {
+    margin-right: 175px;
   }
 }
