--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -1,4 +1,4 @@
-.production-process {
+.production-process__wrapper {
   width: 260px;
   box-sizing: border-box;
   border: 1px solid @grey;
@@ -37,20 +37,40 @@
 
 @media (min-width: @tablet-width) {
   .production-process {
+    width: auto;
+    margin-bottom: 65px;
+  }
+
+  .production-process__wrapper {
+    border: none;
     display: flex;
     flex-direction: column;
   }
 
   .production-process__title {
+    width: 668px;
+    box-sizing: border-box;
     .font (20px; 24px; 700);
     padding-left: 106px;
-    margin-bottom: 35px;
-    margin-top: 40px;
+    margin: 0;
+    padding-bottom: 15px;
+    padding-top: 38px;
+    border-top: 1px solid @grey;
+    border-right: 1px solid @grey;
+    border-left: 1px solid @grey;
+  }
+
+  .production-process__container {
+    width: 668px;
+    box-sizing: border-box;
+    border-right: 1px solid @grey;
+    border-left: 1px solid @grey;
+    border-bottom: 1px solid @grey;
   }
 
   .production-process__text {
-    .font (15px; 24px; 400);
-    padding: 0 40px 40px 40px;
+    .font (15px; 30px; 400);
+    padding: 15px 40px 35px 38px;
   }
 
   .production-process__button {
@@ -68,37 +88,48 @@
   .production-process__img-tablet, {
     display: block;
     order: -1;
+    width: 668px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .production-process {
     position: relative;
-    padding-left: 700px;
+    padding-left: 680px;
     margin-bottom: 105px;
   }
 
   .production-process__title {
+    width: 370px;
     .font (20px; 24px; 700);
     margin: 0;
     padding-top: 95px;
-    padding-left: 60px;
-    padding-bottom: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-bottom: 35px;
+  }
+
+  .production-process__container {
+    width: 370px;
+    box-sizing: border-box;
+    border-right: 1px solid @grey;
+    border-left: 1px solid @grey;
+    border-bottom: 1px solid @grey;
   }
 
   .production-process__text {
     .font (15px; 30px; 400);
     padding: 0;
-    padding-bottom: 55px;
-    padding-left: 60px;
+    padding-bottom: 45px;
+    padding-left: 80px;
   }
 
   .production-process__button {
     width: 230px;
     box-sizing: border-box;
-    margin-left: 60px;
+    margin-left: 80px;
     margin-right: 60px;
-    margin-bottom: 65px;
+    margin-bottom: 60px;
   }
 
   .production-process__img-tablet {
