--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -1,6 +1,7 @@
 .color {
   padding-bottom: 32px;
 }
+
 .color__item {
   padding-top: 35px;
   padding-bottom: 8px;
@@ -8,8 +9,15 @@
 }
 
 @media (min-width: @tablet-width) {
+  .color {
+    padding-top: 65px;
+    padding-bottom: 10px;
+    padding-right: 50px;
+  }
+
   .color__item {
-    padding-top: 55px;
+    padding: 0 130px 58px 130px;
     width: 240px;
+    box-sizing: border-box;
   }
 }
