--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -23,8 +23,25 @@
 
 @media (min-width: @tablet-width) {
   .copyright {
-    padding-top: 0;
-    display: flex;
-    justify-content: space-between;
+    padding: 0;
+    padding-top: 13px;
+    margin: 0;
+    margin-right: 50px;
+  }
+
+  .copyright__text {
+    width: 183px;
+    box-sizing: border-box;
+    position: relative;
+    .stylenone();
+    .font (19px; 18px; 700);
+    vertical-align: middle;
+    padding-right: 10px;
+  }
+
+  .copyright__link {
+    position: absolute;
+    top: 8px;
+    right: 0;
   }
 }
