--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding-bottom: 50px;
     padding-top: 50px;
     margin: 0 -50px;
@@ -28,16 +29,6 @@
   }
 }
 
-@media (min-width: @tablet-width) {
-  .footer {
-    margin: 0 -50px;
-  }
-
-  .footer__logo {
-    display: block;
-    padding-left: 50px;
-  }
-}
 
 @media (min-width: @desktop-width) {
   .footer {
@@ -46,6 +37,6 @@
 
   .footer__logo {
     display: block;
-    padding-left: 100px;
+    padding-left: 50px;
   }
 }
