--- a/source/less/blocks/order-knitting.less
+++ b/source/less/blocks/order-knitting.less
@@ -4,14 +4,13 @@
   margin-bottom: 23px;
 }
 
-.order-knitting__fon {
-  background-color: @grey;
-}
-
 .order-knitting__title {
   .stylenone();
   background-color: @grey;
-  padding: 70px 30px 75px 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 70px;
+  padding-bottom: 75px;
   text-align: center;
   .font(27px; 30px; 700);
 }
@@ -19,37 +18,41 @@
 .order-knitting__text {
   .stylenone();
   .font (13px; 24px; 400);
-  padding-top: 23px;
   padding-left: 30px;
   padding-right: 30px;
+  padding-top: 23px;
 }
 
 @media (min-width: @tablet-width) {
   .order-knitting {
-    position: relative;
     background-color: transparent;
+    position: relative;
     margin-left: -50px;
     margin-right: -50px;
-    margin-bottom: 55px;
+    margin-bottom: 10px;
   }
 
   .order-knitting__title {
+    background-color: transparent;
     .font (43px; 50px; 700);
     padding: 0 50px;
+    padding-top: 5px;
   }
 
   .order-knitting__text {
-    .font (17px; 24px; 400);
+    .font (17px; 30px; 400);
     padding: 0 50px;
-    padding-top: 170px;
+    padding-top: 152px;
   }
 
   .order-knitting__fon {
-    position: absolute;
     background-color: @grey;
+    position: absolute;
+    border-top: 1px solid @grey;
     width: 100%;
+    box-sizing: border-box;
     height: 230px;
-    top: -110px;
+    top: -92px;
     z-index: -1;
   }
 }
@@ -59,20 +62,24 @@
     margin-left: -50px;
     margin-right: -50px;
     margin-top: 30px;
+    margin-bottom: 5px;
   }
 
   .order-knitting__title {
     .font (53px; 57px; 700);
-    padding: 0 100px;
+    padding: 0;
+    padding-top: 21px;
+    margin-bottom: 50px;
   }
 
   .order-knitting__text {
-    .font (13px; 24px; 400);
-    padding: 0 100px;
-    padding-top: 230px;
+    .font (17px; 30px; 400);
+    padding: 0 225px;
+    padding-top: 180px;
   }
 
   .order-knitting__fon {
     height: 256px;
+    top: -72px;
   }
 }
