--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -27,7 +27,6 @@
 }
 
 .page-header__site-list {
-  box-sizing: border-box;
   display: none;
   .stylenone();
   padding-top: 30px;
@@ -53,10 +52,16 @@
 
 @media (min-width: @tablet-width) {
   .page-header {
-    padding-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 0;
   }
 
   .page-header__logo {
+    width: auto;
+    margin: 0;
+    display: block;
     order: 0;
     padding-left: 0;
   }
@@ -67,41 +72,97 @@
 
   .page-header__logo-tablet {
     display: block;
-    .font (15px; 24px; 400);
   }
 
   .page-header__toggle {
     display: none;
   }
 
+  .page-header__link {
+    .font (15px; 24px; 700);
+  }
+
+  .page-header__link--basket {
+    .font (17px; 24px; 700);
+  }
+
   .page-header__site-list {
     display: block;
-    padding: 8px 20px 37px 20px;
+    border-bottom: none;
+    padding: 5px 20px 49px 20px;
   }
 
   .page-header__site-list--order1 {
     order: 3;
+    padding-right: 43px;
+    padding-left: 0;
   }
 
   .page-header__site-list--order2 {
     order: 4;
+    padding-right: 30px;
+    padding-left: 0;
   }
 
   .page-header__site-list--order3 {
     order: 1;
-    padding-left: 100px;
+    margin-left: 210px;
+    height: 17px;
+    width: 17px;
+    margin-top: -22px;
+    padding: 35px 31px;
+    border-left: 1px solid @grey;
+    border-right: 1px solid @grey;
+    position: relative;
+  }
+
+  .page-header__link--hidden:not(:focus):not(:active),
+  input[type="checkbox"].visually-hidden,
+  input[type="radio"].visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+  .page-header__site-list--order3::before {
+    content: "";
+    position: absolute;
+    left: 30px;
+    bottom: 33px;
+    width: 17.6px;
+    height: 17.6px;
+    background-image: url("../img/icon-search.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    opacity: 0.3;
   }
 
   .page-header__site-list--order4 {
+    padding-left: 85px;
+    padding-right: 0;
     order: 2;
   }
 
   .page-header__site-list--order7 {
     order: 5;
+    padding-left: 110px;
+    padding-right: 0;
   }
 
   .page-header__link--tablet {
+    .font (15px; 24px; 400);
     display: block;
+  }
+
+  .page-header__site-list--order5,
+  .page-header__site-list--order6 {
+    display: none;
   }
 }
 
@@ -115,8 +176,8 @@
     display: none;
   }
 
-  .page-header__link--tablet {
-    display: none;
+  .page-header__link {
+    .font (17px; 24px; 700);
   }
 
   .page-header__logo-desktop {
@@ -124,48 +185,69 @@
   }
 
   .page-header__logo {
-    padding-right: 40px;
+    padding-right: 100px;
     padding-left: 0;
     padding-top: 8px;
-    padding-bottom: 7px;
+    padding-bottom: 0;
     order: 3;
   }
 
   .page-header__site-list {
-    padding: 25px 40px 30px 10px;
+    margin: 0;
+    padding: 0;
+    padding-top: 17px;
+    padding-bottom: 0;
   }
 
-  .page-header__link--desktop,
-  .page-header__link--tablet {
+  .page-header__link--desktop {
     display: block;
+    .font (15px; 24px; 700);
   }
+
 
   .page-header__site-list--order1 {
+    padding-top: 30px;
+    padding-right: 75px;
     order: 0;
   }
 
   .page-header__site-list--order2 {
     order: 0;
+    padding-top: 30px;
+    padding-right: 80px;
   }
 
   .page-header__site-list--order3 {
     order: 4;
+    padding-top: 30px;
+    padding-bottom: 42px;
+    padding-right: 33px;
+    padding-left: 33px;
   }
 
   .page-header__site-list--order4 {
+    padding-left: 90px;
+    padding-top: 30px;
     order: 5;
   }
 
   .page-header__site-list--order5 {
+    display: block;
     order: 6;
   }
 
   .page-header__site-list--order6 {
+    display: block;
     order: 7;
-    padding-right: 260px;
+    padding-right: 440px;
   }
 
   .page-header__site-list--order7 {
     order: 8;
+  }
+
+  .page-header__link--tablet {
+    display: block;
+    .font (15px; 24px; 400);
   }
 }
