--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -46,6 +46,7 @@
   }
 
   .product-category__header {
+    border: none;
     background-image: none;
     background-color: transparent;
     height: auto;
@@ -65,7 +66,7 @@
 
   .product-category__title {
     .font (43px; 50px; 700);
-    padding-top: 45px;
+    padding-top: 65px;
     padding-bottom: 370px;
   }
 
@@ -83,7 +84,7 @@
   .product-category__img {
     display: block;
     position: absolute;
-    top: -110px;
+    top: -92px;
     height: 746px;
     width: 100%;
     z-index: -1;
@@ -91,6 +92,7 @@
     background-image: url("../img/hero-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 40%;
+    border-top: 1px solid @grey;
   }
 }
 
@@ -112,8 +114,8 @@
 
   .product-category__title {
     .font (53px; 57px; 700);
-    padding-top: 90px;
-    padding-bottom: 350px;
+    padding-top: 110px;
+    padding-bottom: 360px;
   }
 
   .product-category__text {
@@ -135,7 +137,7 @@
   .product-category__img {
     display: block;
     position: absolute;
-    top: -75px;
+    top: -43px;
     height: 746px;
     width: 100%;
     z-index: -1;
