--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -1,8 +1,9 @@
 .type {
-   padding-top: 8px;
-   padding-bottom: 43px;
-   position: relative;
+  padding-top: 8px;
+  padding-bottom: 43px;
+  position: relative;
 }
+
 .type__item {
   .stylenone();
   padding-top: 25px;
@@ -18,7 +19,14 @@
 }
 
 @media (min-width: @tablet-width) {
+  .type {
+    padding-top: 20px;
+    padding-bottom: 50px;
+  }
+
   .type__item {
     width: 500px;
+    box-sizing: border-box;
+    padding: 45px 30px 15px 80px;
   }
 }
