Маргин для боди

--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -19,6 +19,7 @@ body {
   background: #ffffff;
   font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
+  margin: 0;
 }
 
 .center-wrapper {
