--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -30,11 +30,6 @@
   margin-bottom: 32px;
 }
 
-.production-process__img-tablet,
-.production-process__img-desktop {
-  display: none;
-}
-
 @media (min-width: @tablet-width) {
   .production-process {
     width: auto;
@@ -81,11 +76,7 @@
     margin-bottom: 46px;
   }
 
-  .production-process__img-mobile {
-    display: none;
-  }
-
-  .production-process__img-tablet, {
+  .production-process__img {
     display: block;
     order: -1;
     width: 668px;
@@ -132,12 +123,7 @@
     margin-bottom: 60px;
   }
 
-  .production-process__img-tablet {
-    display: none;
-  }
-
-  .production-process__img-desktop, {
-    display: block;
+  .production-process__img {
     position: absolute;
     top: 0;
     left: 0;
