--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -57,6 +57,11 @@
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     margin-left: -50px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size: 350px 457px;
+    }
   }
 
   .comments__title {
@@ -109,12 +114,10 @@
   .comments {
     padding-top: 70px;
     padding-bottom: 290px;
-    background-image: url("../img/review@1x.jpg");
-    background-repeat: no-repeat;
-    position: relative;
     margin-left: 0;
     padding-left: 175px;
   }
+
 
   .comments__title {
     .font (53px; 57px; 700);
