--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -12,6 +12,11 @@
   height: 283px;
   width: 100%;
   border-top: 2px solid @grey;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 575px 373px;
+  }
 }
 
 .product-category__title {
@@ -93,6 +98,11 @@
     background-repeat: no-repeat;
     background-position: 50% 40%;
     border-top: 1px solid @grey;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+      background-size: 1150px 746px;
+    }
   }
 }
 
@@ -142,8 +152,12 @@
     width: 100%;
     z-index: -1;
     background-color: #f9f9f9;
-    background-image: url("../img/hero-tablet@1x.jpg");
+    background-image: url("../img/hero-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 40%;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+    }
   }
 }
