--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -9,4 +9,14 @@
   border: 2px solid @blacklight;
   background-color: white;
   color: @blacklight;
+
+  &:hover,
+  &:focus {
+    background-color: @blacklight;
+    color: white;
+  }
+
+  &:active {
+    color: #7c7c7c;
+  }
 }
