--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -1,6 +1,18 @@
 .comments {
   padding-top: 27px;
   padding-bottom: 45px;
+  position: relative;
+}
+
+.comments::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  left: 0;
+  bottom: 0;
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat;
 }
 
 .comments__title {
@@ -43,6 +55,15 @@
   border: none;
   width: 130px;
   box-sizing: border-box;
+
+  &:hover,
+  &focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.4;
+  }
 }
 
 .comments__prev {
@@ -53,7 +74,7 @@
   .comments {
     position: relative;
     padding-top: 78px;
-    padding-bottom: 118px;
+    padding-bottom: 58px;
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     margin-left: -50px;
