--- a/source/less/blocks/popular-product.less
+++ b/source/less/blocks/popular-product.less
@@ -3,6 +3,19 @@
   padding-bottom: 35px;
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+
+.popular-product::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  left: 0;
+  bottom: 0;
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat;
+  transform: scale(0.5);
 }
 
 .popular-product__header {
@@ -44,10 +57,6 @@
 }
 
 .popular-product__wrapper-img picture {
-  display: flex;
-}
-
-.popular-product__image {
   margin-left: auto;
 }
 
@@ -67,9 +76,8 @@
 
 @media (min-width: @tablet-width) {
   .popular-product {
-    padding-bottom: 0;
     margin-top: 18px;
-    margin-bottom: 67px;
+    padding-bottom: 67px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -121,7 +129,7 @@
 
   .popular-product__wrapper-img {
     position: absolute;
-    bottom: 0;
+    bottom: 67px;
     right: 0;
   }
 
@@ -141,7 +149,7 @@
 @media (min-width: @desktop-width) {
   .popular-product {
     padding-top: 107px;
-    margin-bottom: 70px;
+    padding-bottom: 70px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -202,7 +210,7 @@
     background-color: @grey;
     position: absolute;
     z-index: -1;
-    bottom: 0;
+    bottom: 70px;
     right: 0;
   }
 
