--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -30,6 +30,12 @@
   border-bottom: 2px solid black;
   margin-bottom: 30px;
   width: 100%;
+
+  &:hover,
+  &:focus,
+  &:active {
+    border-bottom: 2px solid @green;
+  }
 }
 
 .filter__list-text {
@@ -39,6 +45,12 @@
   padding: 13px 14px;
   box-sizing: border-box;
   border: 2px solid black;
+
+  &:hover,
+  &:focus,
+  &:active {
+    border: 2px solid @green;
+  }
 }
 
 @media (min-width: @tablet-width) {
