--- a/source/less/blocks/full-name.less
+++ b/source/less/blocks/full-name.less
@@ -5,6 +5,27 @@
 
 .full-name__block {
   padding-top: 21px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 24px;
+    right: 0;
+    bottom: 5px;
+    background-image: url("../img/icon-phone.svg");
+    background-repeat: no-repeat;
+    transform: scale(0.7);
+    opacity: 0.5;
+    filter: saturate(0);
+  }
+
+  &:hover::after,
+  &:focus::after,
+  &:active::after {
+    filter: saturate(2);
+  }
 }
 
 .full-name__title {
@@ -16,6 +37,13 @@
   padding: 15px 0;
   border-bottom: 2px solid black;
   width: 100%;
+  position: relative;
+
+  &:hover,
+  &:focus,
+  &:active {
+    border-bottom: 2px solid @green;
+  }
 }
 
 @media (min-width: @tablet-width) {
