--- a/source/less/blocks/modal-order.less
+++ b/source/less/blocks/modal-order.less
@@ -1,12 +1,44 @@
 .modal-order {
   display: none;
+  position: absolute;
+  top: 1044px;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: white;
   padding: 35px 30px;
+}
+
+.modal-order__wrapper {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-order__size {
+  width: 80px;
+  box-sizing: border-box;
+  padding: 12px 33px;
+  border: 2px solid @grey;
+
+  &:hover,
+  &:focus {
+    border: 2px solid @blacklight;
+  }
+
+  &:active {
+    border: 2px solid @green;
+  }
 }
 
 .modal-order__title {
   .stylenone();
   .fonttitle();
   text-align: center;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-bottom: 15px;
 }
 
 .modal-order__text {
@@ -14,4 +46,22 @@
   .font (15px; 30px; 400);
   text-align: center;
   color: @blacklight;
+}
+
+.modal-order__button {
+  border: none;
+  background-color: @green;
+  color: white;
+
+  &:hover,
+  &:focus {
+    background-color: @green;
+    color: white;
+    opacity: 0.8;
+  }
+
+  &:active {
+    color: white;
+    opacity: 0.5;
+  }
 }
