--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -34,13 +34,13 @@
 .product-category__interior::after {
   content: "";
   position: absolute;
-  top: 20px;
-  right: 30px;
+  top: 23px;
+  right: 35px;
   width: 40px;
   height: 62px;
   background-image: url("../img/icon-interior.svg");
   background-repeat: no-repeat;
-  transform: scale(0.8);
+  opacity: 0.7;
 }
 
 .product-category__interior:hover::after,
@@ -71,12 +71,12 @@
   content: "";
   position: absolute;
   top: 20px;
-  right: 30px;
+  right: 25px;
   width: 60px;
   height: 60px;
   background-image: url("../img/icon-toy.svg");
   background-repeat: no-repeat;
-  transform: scale(0.8);
+  opacity: 0.7;
 }
 
 .product-category__toys:hover::after,
