--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -28,6 +28,17 @@ body {
   margin: 0 auto;
 }
 
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.3;
+}
+
 @media (min-width: @tablet-width) {
   .center-wrapper {
     padding-left: 50px;
