--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -1,24 +1,29 @@
 .comments {
-  padding-top: 27px;
   padding-bottom: 45px;
   position: relative;
+  margin-left: -30px;
+  margin-right: -30px;
 }
 
 .comments::after {
   content: "";
   position: absolute;
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat-x;
+  background-size: contain;
   width: 100%;
   height: 6px;
   left: 0;
-  bottom: 0;
-  background-image: url("../img/bg-zigzag-line.svg");
-  background-repeat: repeat;
+  bottom: -5px;
+  opacity: 0.3;
 }
 
 .comments__title {
   .stylenone();
   .fonttitle();
   padding-bottom: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .comments__text {
@@ -26,12 +31,19 @@
   .font (15px; 30px; 400);
   padding-bottom: 23px;
   color: @blacklight;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .comments__autor {
   .stylenone();
   .font (17px; 30px; 700);
   color: @black;
+}
+
+.comments__wrapper {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .comments__email {
@@ -68,6 +80,11 @@
 
 .comments__prev {
   border-right: 1px solid @grey;
+}
+
+.comments__button {
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 @media (min-width: @tablet-width) {
