--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,6 +1,6 @@
 .copyright {
   position: relative;
-  padding-top: 27px;
+  padding-top: 25px;
   padding-left: 38px;
   display: flex;
   justify-content: flex-end;
@@ -21,8 +21,8 @@
 
 .copyright__link {
   position: absolute;
-  top: 22px;
-  right: 0;
+  top: 18px;
+  right: 40px;
 
   &:hover,
   &:focus {
