--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,7 +2,7 @@
   position: relative;
   .stylenone();
   padding-top: 22px;
-  padding-bottom: 22px;
+  padding-bottom: 19px;
 }
 
 .page-header__logo {
@@ -38,14 +38,73 @@
 .page-header__site-list {
   display: none;
   .stylenone();
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 27px;
+  padding-bottom: 27px;
   padding-left: 75px;
   border-bottom: 2px solid @grey;
+  margin-right: -30px;
+  margin-left: -30px;
+}
+
+.page-header__site-list--order1 {
+  margin-top: 30px;
+  border-top: 2px solid @grey;
+}
+
+.page-header__link--hidden {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.4;
+  }
+}
+
+.page-header__site-list--order3 {
+  position: relative;
+}
+
+.page-header__search,
+.page-header__cart {
+  position: absolute;
+  top: 27px;
+  left: 30px;
+  opacity: 0.3;
+
+  &:hover,
+  &:focus {
+    fill: @green;
+    opacity: 1;
+  }
+
+  &:active {
+    fill: @green;
+    opacity: 0.3;
+  }
 }
 
 .page-header__link {
   .font (17px; 24px; 700);
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.4;
+  }
+}
+
+.page-header__site-list--order4 {
+  border-bottom: none;
+  padding-bottom: 8px;
+  position: relative;
 }
 
 .page-header__link--desktop,
@@ -89,15 +148,6 @@
 
   .page-header__link {
     .font (15px; 24px; 700);
-  }
-
-  .page-header__link:hover,
-  .page-header__link:focus {
-    opacity: 0.7;
-  }
-
-  .page-header__link:active {
-    opacity: 0.4;
   }
 
   .page-header__link--basket {
@@ -149,28 +199,17 @@
   }
 
   .page-header__search {
-    opacity: 0.3;
-
-    &:hover,
-    &:focus {
-      fill: @green;
-      opacity: 1;
-    }
+    position: static;
   }
 
   .page-header__cart {
+    position: static;
     padding-left: 0;
     padding-right: 20px;
-    opacity: 0.3;
-
-    &:hover,
-    &:focus {
-      fill: @green;
-      opacity: 1;
-    }
   }
 
   .page-header__site-list--order4 {
+    position: static;
     padding-right: 0;
     order: 2;
   }
