--- a/source/less/blocks/popular-product.less
+++ b/source/less/blocks/popular-product.less
@@ -4,24 +4,29 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  margin-right: -30px;
+  margin-left: -30px;
 }
 
 .popular-product::after {
   content: "";
   position: absolute;
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat-x;
+  background-size: contain;
   width: 100%;
   height: 6px;
   left: 0;
-  bottom: 0;
-  background-image: url("../img/bg-zigzag-line.svg");
-  background-repeat: repeat;
-  transform: scale(0.5);
+  bottom: -8px;
+  opacity: 0.3;
 }
 
 .popular-product__header {
   .stylenone();
   .fonttitle();
   padding-bottom: 5px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .popular-product__time {
@@ -29,6 +34,8 @@
   .font (17px; 20px; 700);
   color: @green;
   text-transform: uppercase;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .popular-product__description {
@@ -45,10 +52,15 @@
   color: @blacklight;
 }
 
+.popular-product__wrapper {
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
 .popular-product__string {
   .font (15px; 20px; 400);
   border-bottom: 1px solid @grey;
-  padding: 11px 25px 9px 0;
+  padding: 11px 28px 8px 0;
 }
 
 .popular-product__wrapper-img {
