--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -7,6 +7,9 @@
   margin-bottom: 31px;
   width: 260px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 
   &:hover .catalog-item__wrapper,
   &:focus .catalog-item__wrapper {
@@ -18,6 +21,10 @@
   }
 }
 
+.catalog-item__wrapper1 {
+  height: 195px;
+}
+
 .catalog-item__wrapper {
   border: 1px solid @grey;
 }
@@ -25,10 +32,10 @@
 .catalog-item__title {
   .stylenone();
   .font (17px; 24px; 700);
-  padding-left: 28px;
-  padding-right: 80px;
-  padding-top: 24px;
+  padding-top: 26px;
   padding-bottom: 5px;
+  padding-right: 28px;
+  padding-left: 28px;
 
   &:hover,
   &:focus {
@@ -51,13 +58,14 @@
 }
 
 .catalog-item__contener {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
 }
 
 .catalog-item__svg {
-  opacity: 0.5;
+  position: absolute;
+  top: 22px;
+  right: 27px;
+  opacity: 0.3;
 
   &:hover,
   &:focus {
@@ -66,7 +74,7 @@
   }
 
   &:active {
-    opacity: 0.5;
+    opacity: 0.3;
     fill: @green;
   }
 }
@@ -78,7 +86,6 @@
   padding-left: 28px;
   padding-top: 20px;
   padding-bottom: 27px;
-  border-top: 1px solid @grey;
 }
 
 @media (min-width: @tablet-width) {
