--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -13,11 +13,11 @@
 .color-input + label::before {
   content: "";
   position: absolute;
-  left: 2px;
-  top: 20px;
+  left: 0;
+  top: 22px;
 
-  width: 30px;
-  height: 30px;
+  width: 36px;
+  height: 35px;
   background-color: transparent;
   border: 2px solid #4e4e4e;
   cursor: pointer;
@@ -27,7 +27,7 @@
   content: "";
   position: absolute;
   left: 2px;
-  top: 25px;
+  top: 31px;
   width: 32px;
   height: 22px;
   transform: scale(0.7);
