--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -21,20 +21,84 @@
   padding-bottom: 27px;
 }
 
-.filter__list-phone,
 .filter__list-email {
+ .font(17px; 17px; 400);
   box-sizing: border-box;
   border: none;
-  padding: 19px 0;
+  padding: 16px 0;
   padding-right: 45px;
   border-bottom: 2px solid black;
   margin-bottom: 30px;
   width: 100%;
+  opacity: 0.5;
 
   &:hover,
   &:focus,
   &:active {
     border-bottom: 2px solid @green;
+  }
+}
+
+.filter__list-phone {
+  .font(19px; 19px; 400);
+  box-sizing: border-box;
+  border: none;
+  padding: 17px 0;
+  padding-right: 45px;
+  border-bottom: 2px solid black;
+  margin-bottom: 30px;
+  width: 100%;
+  opacity: 0.5;
+
+  &:hover,
+  &:focus,
+  &:active {
+    border-bottom: 2px solid @green;
+  }
+}
+
+.filter__tel {
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 24px;
+    right: 10px;
+    bottom: 45px;
+    background-image: url("../img/icon-phone.svg");
+    background-repeat: no-repeat;
+    opacity: 0.5;
+    filter: saturate(0);
+  }
+
+  &:hover::after,
+  &:focus::after,
+  &:active::after {
+    filter: saturate(2);
+  }
+}
+
+.filter__mail {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 5px;
+    bottom: 40px;
+    background-image: url("../img/icon-mail.svg");
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    filter: saturate(0);
+  }
+
+  &:hover::after,
+  &:focus::after,
+  &:active::after {
+    filter: saturate(2);
   }
 }
 
@@ -45,6 +109,7 @@
   padding: 13px 14px;
   box-sizing: border-box;
   border: 2px solid black;
+  opacity: 0.5;
 
   &:hover,
   &:focus,
