--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -22,11 +22,11 @@
 .type__input + label::before {
   content: "";
   position: absolute;
-  left: 2px;
-  top: 5px;
+  left: 0;
+  top: 15px;
 
-  width: 40px;
-  height: 40px;
+  width: 36px;
+  height: 36px;
   background-color: transparent;
   border: 2px solid #4e4e4e;
   border-radius: 50%;
