страница каталога планшет

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -29,12 +29,12 @@
 @media (min-width: @tablet-width) {
   .advantages {
     padding-top: 50px;
-    padding-bottom: 26px;
+    padding-bottom: 65px;
   }
 
   .advantages__title {
     .font (43px; 50px; 700);
-    padding-bottom: 54px;
+    padding-bottom: 12px;
   }
 
   .advantages__wrapper {
@@ -49,9 +49,14 @@
 
   .advantages__item {
     .font (20px; 22px; 700);
-    padding-top: 52px;
-    padding-bottom: 58px;
+    padding-top: 71px;
+    padding-bottom: 0;
     width: 334px;
+  }
+
+  .advantages__svg {
+    top: 40px;
+    left: 1px;
   }
 }
 
