--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -95,7 +95,8 @@
   }
 
   .catalog-item__wrapper {
-    max-height: 334px;
+    width: 334px;
+    height: 334px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -104,15 +105,17 @@
 
   .catalog-item__prodact {
     width: 668px;
+    box-sizing: border-box;
     display: flex;
-    margin-bottom: 52px;
+    flex-direction: row;
+    margin-bottom: 54px;
   }
 
   .catalog-item__title {
     .font (20px; 24px; 700);
+    padding-right: 70px;
     padding-left: 25px;
     padding-top: 25px;
-    padding-bottom: 0;
   }
 
   .catalog-item__characteristic {
@@ -120,14 +123,24 @@
     .font (15px; 30px; 400);
     margin: 0;
     padding-left: 25px;
-    padding-bottom: 160px;
+    padding-bottom: 153px;
   }
 
   .catalog-item__price {
+    border-top: 1px solid @grey;
     .font (17px; 24px; 700);
-    padding-left: 30px;
-    padding-top: 20px;
-    padding-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 0;
+    padding-top: 27px;
+    padding-bottom: 25px;
+  }
+
+  .catalog-item__svg {
+    position: absolute;
+    top: 24px;
+    right: 30px;
+    opacity: 0.3;
   }
 }
 
