--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -21,7 +21,19 @@
     background-color: transparent;
     margin-left: -50px;
     margin-right: -50px;
-    margin-bottom: 160px;
+    margin-bottom: 82px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      background-image: url("../img/bg-zigzag-fill.svg");
+      background-repeat: repeat-x;
+      background-size: contain;
+      width: 100%;
+      height: 27px;
+      left: 0;
+      bottom: -15px;
+    }
   }
 
   .catalog__title {
