--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -91,14 +91,21 @@
   .comments {
     position: relative;
     padding-top: 78px;
-    padding-bottom: 58px;
+    padding-bottom: 128px;
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     margin-left: -50px;
+    margin-right: -50px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/review@2x.jpg");
       background-size: 350px 457px;
+    }
+
+    &::after {
+      width: 100%;
+      height: 17px;
+      opacity: 0.1;
     }
   }
 
@@ -106,12 +113,16 @@
     .font (43px; 50px; 700);
     padding-bottom: 49px;
     padding-left: 50px;
+    padding-right: 50px;
+    margin: 0;
   }
 
   .comments__text {
     .font (17px; 30px; 400);
     padding-bottom: 53px;
     padding-left: 50px;
+    padding-right: 50px;
+    margin: 0;
   }
 
   .comments__button {
@@ -119,7 +130,8 @@
     width: 175px;
     box-sizing: border-box;
     top: 80px;
-    right: 0;
+    right: 50px;
+    margin: 0;
   }
 
   .comments__button-wrapper {
@@ -133,6 +145,8 @@
     display: flex;
     justify-content: space-between;
     padding-left: 50px;
+    padding-right: 50px;
+    margin: 0;
   }
 
   .comments__prev,
