--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -65,7 +65,7 @@
 
 @media (min-width: @tablet-width) {
   .contacts {
-    padding-top: 75px;
+    padding-top: 65px;
   }
 
   .contacts__title {
@@ -78,9 +78,9 @@
     content: "";
     position: absolute;
     width: 46px;
-    height: 82px;
-    left: 580px;
-    bottom: 20px;
+    height: 81px;
+    right: 3px;
+    bottom: 5px;
     background-image: url("../img/icon-flag.svg");
   }
 
