--- a/source/less/blocks/popular-product.less
+++ b/source/less/blocks/popular-product.less
@@ -93,15 +93,21 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-right: -50px;
+    margin-left: -50px;
   }
 
   .popular-product__flex {
+    margin-right: 50px;
+    margin-left: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
   .popular-product__wrapper {
+    margin-right: 50px;
+    margin-left: 50px;
     display: flex;
     flex-direction: column;
     width: 334px;
@@ -111,12 +117,14 @@
 
   .popular-product__header {
     .font(43px; 50px; 700);
+    margin: 0;
   }
 
   .popular-product__time {
     width: 100px;
     padding-right: 12px;
     text-align: center;
+    margin: 0;
   }
 
   .popular-product__description {
@@ -142,7 +150,7 @@
   .popular-product__wrapper-img {
     position: absolute;
     bottom: 67px;
-    right: 0;
+    right: 50px;
   }
 
   .popular-product__price {
@@ -156,6 +164,20 @@
     box-sizing: border-box;
     padding: 15px 0;
   }
+
+  .popular-product::after {
+  content: "";
+  position: absolute;
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat-x;
+  background-size: contain;
+  width: 100%;
+  height: 17px;
+  left: 0;
+  bottom: 0;
+  opacity: 0.1;
+}
+
 }
 
 @media (min-width: @desktop-width) {
