--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -87,6 +87,11 @@
     border: none;
     display: flex;
     flex-direction: column;
+
+    &::before {
+      left: 282px;
+      top: 190px;
+    }
   }
 
   .production-process__title {
@@ -100,6 +105,11 @@
     border-top: 1px solid @grey;
     border-right: 1px solid @grey;
     border-left: 1px solid @grey;
+
+    &::before {
+      left: 40px;
+      bottom: 10px;
+    }
   }
 
   .production-process__container {
@@ -112,7 +122,7 @@
 
   .production-process__text {
     .font (15px; 30px; 400);
-    padding: 15px 40px 35px 38px;
+    padding: 15px 40px 37px 38px;
   }
 
   .production-process__button {
@@ -120,13 +130,14 @@
     box-sizing: border-box;
     margin-left: 42px;
     margin-right: 42px;
-    margin-bottom: 46px;
+    margin-bottom: 44px;
   }
 
-  .production-process__img {
+  .production-process__img-conteiner {
     display: block;
     order: -1;
     width: 668px;
+    height: 455px;
   }
 }
 
