--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -46,9 +46,15 @@
   }
 
   .social__item {
-    padding: 30px 0 0 60px;
+    padding: 0;
+    padding-top: 10px;
+    padding-right: 40px;
   }
 
+
+.social__svg {
+  position: static;
+}
   .social__link--instagram::before {
     bottom: -4px;
   }
