--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -124,12 +124,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
     padding-bottom: 0;
-    max-width: 860px;
+    max-width: 820px;
+    margin: 0 auto;
     box-sizing: border-box;
   }
 
   .page-header__logo {
-    width: auto;
+    padding-right: 27%;
+    width: 43%;
+    box-sizing: border-box;
     margin: 0;
     display: block;
     order: 0;
@@ -178,7 +181,6 @@
 
   .page-header__site-list--order3 {
     order: 1;
-    margin-left: 180px;
     height: 17px;
     width: 17px;
     margin-top: -22px;
