--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -61,4 +61,33 @@
     width: 240px;
     box-sizing: border-box;
   }
+
+  .color-input + label::before {
+  content: "";
+  position: absolute;
+  left: 50px;
+  top: -15px;
+
+  width: 50px;
+  height: 49px;
+  background-color: transparent;
+  border: 2px solid #4e4e4e;
+  cursor: pointer;
+}
+
+.color-input-checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 60px;
+  top: 0;
+  width: 32px;
+  height: 22px;
+  transform: scale(1);
+
+  background-image: url("../img/icon-tick.svg");
+  opacity: 0.8;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+}
 }
