--- a/source/less/blocks/order-knitting.less
+++ b/source/less/blocks/order-knitting.less
@@ -30,6 +30,18 @@
     margin-left: -50px;
     margin-right: -50px;
     margin-bottom: 10px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      background-image: url("../img/bg-zigzag-fill.svg");
+      background-repeat: repeat-x;
+      background-size: contain;
+      width: 100%;
+      height: 27px;
+      left: 0;
+      bottom: 117px;
+    }
   }
 
   .order-knitting__title {
