--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -36,8 +36,8 @@
 .type__input--radio:checked + label::after {
   content: "";
   position: absolute;
-  left: 17px;
-  top: 19px;
+  left: 13px;
+  top: 26px;
   width: 15px;
   height: 15px;
 
@@ -58,13 +58,40 @@
 
 @media (min-width: @tablet-width) {
   .type {
-    padding-top: 20px;
-    padding-bottom: 50px;
+    padding-top: 17px;
+    padding-bottom: 53px;
   }
 
   .type__item {
     width: 500px;
     box-sizing: border-box;
     padding: 45px 30px 15px 80px;
+  }
+
+  .type__input + label::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 27px;
+
+    width: 49px;
+    height: 49px;
+    background-color: transparent;
+    border: 2px solid #4e4e4e;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .type__input--radio:checked + label::after {
+    content: "";
+    position: absolute;
+    left: 16px;
+    top: 43px;
+    width: 20px;
+    height: 20px;
+
+    background-color: @green;
+    border-radius: 50%;
+    cursor: pointer;
   }
 }
